# GiflibDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/giflibdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GifFrame.cpp  GifFrame.h  log.h  native-lib.cpp
app/src/main/java/com/example/giflibdemo/: MainActivity.java
app/src/main/java/com/example/giflibdemo/gif/: GifDrawable.java  GifFrame.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
